--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -14,9 +14,9 @@
    "cell_type": "code",
    "source": [
     "# Clone your repository into Colab",
-    "repo_url = \"https://github.com/ORG_NAME/REPO_NAME.git\"  # Replace",
+    "repo_url = \"https://github.com/CHRIST-SDS/test.git\"",
     "!git clone $repo_url",
-    "%cd REPO_NAME"
+    "%cd test"
    ]
   },
   {
