--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1,31 +1,55 @@
 {
- "nbformat": 4,
- "nbformat_minor": 5,
- "metadata": {},
- "cells": [
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# Assignment: Square a Number\n",
-    "This notebook helps you test your code before submitting."
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 5,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10"
+    }
   },
-  {
-   "cell_type": "code",
-   "source": [
-    "# Clone your repository into Colab",
-    "repo_url = \"https://github.com/CHRIST-SDS/test.git\"",
-    "!git clone $repo_url",
-    "%cd test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "# Run tests locally in Colab",
-    "!pip install pytest",
-    "!pytest -q"
-   ]
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Assignment: Square a Number\n",
+        "This notebook helps you test your code before submitting."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "clone"
+      },
+      "source": [
+        "# Clone your repository into Colab\n",
+        "repo_url = \"https://github.com/CHRIST-SDS/test.git\"\n",
+        "!git clone $repo_url\n",
+        "%cd test"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pytest"
+      },
+      "source": [
+        "# Run tests locally in Colab\n",
+        "!pip install pytest\n",
+        "!pytest -q"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
 }
