--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -21,32 +21,58 @@
       "metadata": {},
       "source": [
         "# Assignment: Square a Number\n",
-        "This notebook helps you test your code before submitting."
+        "This notebook helps you test your code before submitting.\n",
+        "Students: just run all cells. Tests will run automatically."
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "clone"
-      },
+      "metadata": {},
       "source": [
-        "# Clone your repository into Colab\n",
-        "repo_url = \"https://github.com/CHRIST-SDS/test.git\"\n",
-        "!git clone $repo_url\n",
-        "%cd test"
+        "# 1️⃣ Download student code from GitHub Classroom repo\n",
+        "# Replace <STUDENT_USERNAME> and <STUDENT_REPO> with your repo info\n",
+        "!mkdir -p student_code\n",
+        "!wget -O student_code/main.py https://raw.githubusercontent.com/<STUDENT_USERNAME>/<STUDENT_REPO>/main/student_code/main.py"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "pytest"
-      },
+      "metadata": {},
       "source": [
-        "# Run tests locally in Colab\n",
-        "!pip install pytest\n",
-        "!pytest -q"
+        "# 2️⃣ Add student_code folder to Python path\n",
+        "import sys\n",
+        "sys.path.insert(0, '/content/student_code')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# 3️⃣ Import student function\n",
+        "from main import square"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# 4️⃣ Run pre-written tests\n",
+        "def run_tests():\n",
+        "    try:\n",
+        "        assert square(2) == 4, \"Test 1 failed: square(2) != 4\"\n",
+        "        assert square(-3) == 9, \"Test 2 failed: square(-3) != 9\"\n",
+        "        assert square(0) == 0, \"Test 3 failed: square(0) != 0\"\n",
+        "        print(\"All tests passed! ✅\")\n",
+        "    except AssertionError as e:\n",
+        "        print(e)\n",
+        "\n",
+        "run_tests()"
       ],
       "execution_count": null,
       "outputs": []
